@@ -2,6 +2,12 @@
 
 version 0.29:
 
+	Fixes:
+	- dependency on HTTP::Daemon too high.
+
+	Improvements:
+	- explicit state protocol with new(protocol) begin HTTP or HTTPS.
+
 version 0.28: Wed 20 Mar 17:18:25 CET 2019
 
 	Fixes:
